<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="56dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <Button
            android:id="@+id/btnSavePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnSaveColor"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnDeletePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnDeleteColor"
            android:text="@string/btnDelete" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblPostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPostTitle" />

        <EditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPostTitle"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblPostBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputTitle"
            android:text="@string/lblPostBody" />

        <EditText
            android:id="@+id/inputBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPostBody"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/inputId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputTitle"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>